test/fail/ub_packing14.v3
//@execute false=-20; true=-16
type T(x: i8, y: i8) #unboxed #packed;

var t1 = T(-9, -7), t2 = T(-11, -9);

def main(a: bool) -> int {
	var t = if(a, t1, t2);
	return t.x + t.y;
}
